--- a/index.html
+++ b/index.html
@@ -1,14 +1,260 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="dist/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="dist/favicon-16x16.png" sizes="16x16" />
-    <title>CSF Openapi Spec</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="/public/favicon-32x32.png"
+      sizes="32x32"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/public/favicon-16x16.png"
+      sizes="16x16"
+    />
+    <title>API Documentation</title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swagger-ui-dist@5.9.0/swagger-ui.css"
+    />
+    <!-- Add Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      /* Apply professional fonts to the entire document */
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+      }
+
+      /* Override Swagger UI fonts */
+      .swagger-ui,
+      .swagger-ui .opblock .opblock-summary-operation-id,
+      .swagger-ui .opblock .opblock-summary-path,
+      .swagger-ui .opblock .opblock-summary-path__deprecated,
+      .swagger-ui .opblock-description-wrapper p,
+      .swagger-ui .info .title,
+      .swagger-ui .info p,
+      .swagger-ui .info li,
+      .swagger-ui .tab li,
+      .swagger-ui table thead tr td,
+      .swagger-ui table thead tr th,
+      .swagger-ui .parameters-col_description p,
+      .swagger-ui .responses-inner h4,
+      .swagger-ui .responses-inner h5,
+      .swagger-ui .model-title,
+      .swagger-ui .model {
+        font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+      }
+
+      /* Darker blue sticky banner */
+      .top-banner {
+        background-color: #3a7bc8; /* Darker sky blue color */
+        color: white;
+        padding: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+      }
+
+      /* Banner left side with logo */
+      .banner-left {
+        display: flex;
+        align-items: center;
+      }
+
+      /* Logo placeholder */
+      .logo-placeholder {
+        width: 40px;
+        height: 40px;
+        background-color: rgba(255, 255, 255, 0.2);
+        border-radius: 8px;
+        margin-right: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: bold;
+        font-size: 20px;
+      }
+
+      .logo-link {
+        display: flex;
+        align-items: center;
+        color: white;
+        text-decoration: none;
+        transition: opacity 0.2s;
+      }
+
+      .logo-link:hover {
+        opacity: 0.9;
+        text-decoration: none;
+      }
+
+      .top-banner h1 {
+        margin: 0;
+        font-size: 26px; /* Increased font size */
+        font-weight: 600;
+        letter-spacing: -0.5px;
+      }
+
+      .api-selector {
+        display: flex;
+        align-items: center;
+      }
+
+      .api-selector label {
+        margin-right: 10px;
+        font-weight: 500;
+        font-size: 16px; /* Increased font size */
+      }
+
+      .api-selector select {
+        padding: 10px 14px; /* Larger padding */
+        border-radius: 6px;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        background-color: rgba(255, 255, 255, 0.2);
+        color: white;
+        font-size: 16px; /* Increased font size */
+        font-family: "Inter", sans-serif;
+        font-weight: 500;
+        cursor: pointer;
+        transition: all 0.2s ease;
+      }
+
+      .api-selector select:hover {
+        background-color: rgba(255, 255, 255, 0.3);
+      }
+
+      .api-selector select:focus {
+        outline: none;
+        box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.5);
+      }
+
+      #swagger-ui {
+        margin: 0;
+        padding-top: 20px; /* Add some space below the sticky header */
+      }
+
+      /* Improve readability of Swagger UI */
+      .swagger-ui .info .title {
+        font-weight: 600;
+        font-size: 32px; /* Increased font size */
+      }
+
+      .swagger-ui .opblock-tag {
+        font-size: 22px; /* Increased font size */
+        font-weight: 600;
+      }
+
+      .swagger-ui .opblock .opblock-summary-operation-id,
+      .swagger-ui .opblock .opblock-summary-path,
+      .swagger-ui .opblock .opblock-summary-path__deprecated {
+        font-size: 16px; /* Increased font size */
+      }
+
+      /* Increase font size for description text */
+      .swagger-ui .opblock-description-wrapper p,
+      .swagger-ui .info p,
+      .swagger-ui .info li {
+        font-size: 16px; /* Increased font size */
+      }
+
+      /* Increase font size for parameter descriptions */
+      .swagger-ui .parameters-col_description p {
+        font-size: 15px; /* Increased font size */
+      }
+
+      /* Increase font size for response descriptions */
+      .swagger-ui .responses-inner h4,
+      .swagger-ui .responses-inner h5 {
+        font-size: 16px; /* Increased font size */
+      }
+    </style>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div class="top-banner">
+      <div class="banner-left">
+        <a href="/" class="logo-link">
+          <div class="logo-placeholder">TCT</div>
+          <h1>TCT Foundation API Documentation</h1>
+        </a>
+      </div>
+      <div class="api-selector">
+        <label for="api-select">Select API:</label>
+        <select id="api-select" onchange="loadSpec(this.value)">
+          <option value="/public/specs/authentication-api.yaml">
+            Authentication API
+          </option>
+          <option value="/public/specs/user-management-api.yaml">
+            User Management API
+          </option>
+          <option value="/public/specs/admin-api.yaml">Admin API</option>
+        </select>
+      </div>
+    </div>
+    <div id="swagger-ui"></div>
+    <script src="https://unpkg.com/swagger-ui-dist@5.9.0/swagger-ui-bundle.js"></script>
+    <script src="https://unpkg.com/swagger-ui-dist@5.9.0/swagger-ui-standalone-preset.js"></script>
+    <script>
+      // Initialize with the first spec
+      let ui;
+
+      function loadSpec(url) {
+        if (ui) {
+          ui.specActions.updateUrl(url);
+          ui.specActions.download(url);
+        } else {
+          initSwaggerUI(url);
+        }
+
+        // Update URL parameter
+        const newUrl = new URL(window.location);
+        newUrl.searchParams.set("spec", url);
+        window.history.pushState({}, "", newUrl);
+      }
+
+      function initSwaggerUI(url) {
+        ui = SwaggerUIBundle({
+          url: url,
+          dom_id: "#swagger-ui",
+          deepLinking: true,
+          presets: [SwaggerUIBundle.presets.apis, SwaggerUIStandalonePreset],
+          plugins: [SwaggerUIBundle.plugins.DownloadUrl],
+          layout: "BaseLayout",
+          docExpansion: "list",
+          defaultModelsExpandDepth: 1,
+          defaultModelExpandDepth: 1,
+          displayRequestDuration: true,
+          filter: true,
+        });
+      }
+
+      window.onload = function () {
+        // Check if a spec is specified in the URL
+        const urlParams = new URLSearchParams(window.location.search);
+        const specUrl =
+          urlParams.get("spec") || "/public/specs/authentication-api.yaml";
+
+        // Set the dropdown to match the URL
+        document.getElementById("api-select").value = specUrl;
+
+        // Initialize Swagger UI
+        initSwaggerUI(specUrl);
+      };
+    </script>
   </body>
 </html>
