--- a/index.html
+++ b/index.html
@@ -1,13 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Keep existing head content -->
-    <script>
-      // Add this function to get the base URL
-      function getBaseUrl() {
-        return "/csf-portal-api";
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/csf-portal-api/public/favicon-32x32.png"
+      sizes="32x32"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/csf-portal-api/public/favicon-16x16.png"
+      sizes="16x16"
+    />
+    <title>API Documentation</title>
+    <!-- Add Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Load Swagger UI CSS first -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swagger-ui-dist@5.9.0/swagger-ui.css"
+    />
+    <style>
+      /* Apply professional fonts to the entire document */
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
       }
-    </script>
+
+      /* Override Swagger UI fonts with higher specificity */
+      .swagger-ui,
+      .swagger-ui .opblock .opblock-summary-operation-id,
+      .swagger-ui .opblock .opblock-summary-path,
+      .swagger-ui .opblock .opblock-summary-path__deprecated,
+      .swagger-ui .opblock-description-wrapper p,
+      .swagger-ui .info .title,
+      .swagger-ui .info p,
+      .swagger-ui .info li,
+      .swagger-ui .tab li,
+      .swagger-ui table thead tr td,
+      .swagger-ui table thead tr th,
+      .swagger-ui .parameters-col_description p,
+      .swagger-ui .responses-inner h4,
+      .swagger-ui .responses-inner h5,
+      .swagger-ui .model-title,
+      .swagger-ui .model {
+        font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, sans-serif !important;
+      }
+
+      /* Rest of your styles... */
+    </style>
   </head>
   <body>
     <div class="top-banner">
@@ -34,14 +86,19 @@
     <script src="https://unpkg.com/swagger-ui-dist@5.9.0/swagger-ui-bundle.js"></script>
     <script src="https://unpkg.com/swagger-ui-dist@5.9.0/swagger-ui-standalone-preset.js"></script>
     <script>
+      // Add this function to get the base URL
+      function getBaseUrl() {
+        return '/csf-portal-api';
+      }
+      
       // Initialize with the first spec
       let ui;
 
       function loadSpec(url) {
         // Prepend base URL if the URL doesn't already include it
         const baseUrl = getBaseUrl();
-        const fullUrl = url.startsWith("http") ? url : `${baseUrl}/${url}`;
-
+        const fullUrl = url.startsWith('http') ? url : `${baseUrl}/${url}`;
+        
         if (ui) {
           ui.specActions.updateUrl(fullUrl);
           ui.specActions.download(fullUrl);
@@ -68,14 +125,17 @@
           defaultModelExpandDepth: 1,
           displayRequestDuration: true,
           filter: true,
+          // Add this to override Swagger UI styles
+          stylesheets: [
+            "https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+          ]
         });
       }
 
       window.onload = function () {
         // Check if a spec is specified in the URL
         const urlParams = new URLSearchParams(window.location.search);
-        const specUrl =
-          urlParams.get("spec") || "public/specs/authentication-api.yaml";
+        const specUrl = urlParams.get("spec") || "public/specs/authentication-api.yaml";
 
         // Set the dropdown to match the URL
         document.getElementById("api-select").value = specUrl;
