--- a/index.html
+++ b/index.html
@@ -58,7 +58,134 @@
           Roboto, Oxygen, Ubuntu, Cantarell, sans-serif !important;
       }
 
-      /* Rest of your styles... */
+      /* Darker blue sticky banner */
+      .top-banner {
+        background-color: #3a7bc8; /* Darker sky blue color */
+        color: white;
+        padding: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+      }
+
+      /* Banner left side with logo */
+      .banner-left {
+        display: flex;
+        align-items: center;
+      }
+
+      /* Logo placeholder */
+      .logo-placeholder {
+        width: 40px;
+        height: 40px;
+        background-color: rgba(255, 255, 255, 0.2);
+        border-radius: 8px;
+        margin-right: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: bold;
+        font-size: 20px;
+      }
+
+      .logo-link {
+        display: flex;
+        align-items: center;
+        color: white;
+        text-decoration: none;
+        transition: opacity 0.2s;
+      }
+
+      .logo-link:hover {
+        opacity: 0.9;
+        text-decoration: none;
+      }
+
+      .top-banner h1 {
+        margin: 0;
+        font-size: 26px; /* Increased font size */
+        font-weight: 600;
+        letter-spacing: -0.5px;
+        color: white;
+      }
+
+      .api-selector {
+        display: flex;
+        align-items: center;
+      }
+
+      .api-selector label {
+        margin-right: 10px;
+        font-weight: 500;
+        font-size: 16px; /* Increased font size */
+        color: white;
+      }
+
+      .api-selector select {
+        padding: 10px 14px; /* Larger padding */
+        border-radius: 6px;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        background-color: rgba(255, 255, 255, 0.2);
+        color: white;
+        font-size: 16px; /* Increased font size */
+        font-family: "Inter", sans-serif;
+        font-weight: 500;
+        cursor: pointer;
+        transition: all 0.2s ease;
+      }
+
+      .api-selector select:hover {
+        background-color: rgba(255, 255, 255, 0.3);
+      }
+
+      .api-selector select:focus {
+        outline: none;
+        box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.5);
+      }
+
+      #swagger-ui {
+        margin: 0;
+        padding-top: 20px; /* Add some space below the sticky header */
+      }
+
+      /* Improve readability of Swagger UI */
+      .swagger-ui .info .title {
+        font-weight: 600;
+        font-size: 32px; /* Increased font size */
+      }
+
+      .swagger-ui .opblock-tag {
+        font-size: 22px; /* Increased font size */
+        font-weight: 600;
+      }
+
+      .swagger-ui .opblock .opblock-summary-operation-id,
+      .swagger-ui .opblock .opblock-summary-path,
+      .swagger-ui .opblock .opblock-summary-path__deprecated {
+        font-size: 16px; /* Increased font size */
+      }
+
+      /* Increase font size for description text */
+      .swagger-ui .opblock-description-wrapper p,
+      .swagger-ui .info p,
+      .swagger-ui .info li {
+        font-size: 16px; /* Increased font size */
+      }
+
+      /* Increase font size for parameter descriptions */
+      .swagger-ui .parameters-col_description p {
+        font-size: 15px; /* Increased font size */
+      }
+
+      /* Increase font size for response descriptions */
+      .swagger-ui .responses-inner h4,
+      .swagger-ui .responses-inner h5 {
+        font-size: 16px; /* Increased font size */
+      }
     </style>
   </head>
   <body>
@@ -88,17 +215,17 @@
     <script>
       // Add this function to get the base URL
       function getBaseUrl() {
-        return '/csf-portal-api';
+        return "/csf-portal-api";
       }
-      
+
       // Initialize with the first spec
       let ui;
 
       function loadSpec(url) {
         // Prepend base URL if the URL doesn't already include it
         const baseUrl = getBaseUrl();
-        const fullUrl = url.startsWith('http') ? url : `${baseUrl}/${url}`;
-        
+        const fullUrl = url.startsWith("http") ? url : `${baseUrl}/${url}`;
+
         if (ui) {
           ui.specActions.updateUrl(fullUrl);
           ui.specActions.download(fullUrl);
@@ -127,15 +254,16 @@
           filter: true,
           // Add this to override Swagger UI styles
           stylesheets: [
-            "https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-          ]
+            "https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap",
+          ],
         });
       }
 
       window.onload = function () {
         // Check if a spec is specified in the URL
         const urlParams = new URLSearchParams(window.location.search);
-        const specUrl = urlParams.get("spec") || "public/specs/authentication-api.yaml";
+        const specUrl =
+          urlParams.get("spec") || "public/specs/authentication-api.yaml";
 
         // Set the dropdown to match the URL
         document.getElementById("api-select").value = specUrl;
