updated banner for consistency

--- a/index.html
+++ b/index.html
@@ -113,7 +113,11 @@
 
       .top-banner h1 {
         margin: 0;
-        font-size: clamp(18px, 5vw, 26px); /* Responsive font size */
+        font-size: clamp(
+          18px,
+          5vw,
+          24px
+        ); /* Reduced from 26px to 24px to match convert-markdown.js */
         font-weight: 600;
         letter-spacing: -0.5px;
         color: white;
