Updates on responsiveness

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         align-items: center;
         flex: 1;
         min-width: 200px;
-        margin-bottom: 10px;
+        max-width: 60%; /* Add this to limit width */
       }
 
       /* Logo placeholder */
@@ -113,17 +113,14 @@
 
       .top-banner h1 {
         margin: 0;
-        font-size: clamp(
-          18px,
-          5vw,
-          24px
-        ); /* Reduced from 26px to 24px to match convert-markdown.js */
+        font-size: clamp(16px, 4vw, 20px); /* Smaller font size */
         font-weight: 600;
         letter-spacing: -0.5px;
         color: white;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
+        white-space: normal; /* Allow text to wrap */
+        overflow: visible; /* Don't hide overflow */
+        line-height: 1.2; /* Tighter line height for wrapped text */
+        max-width: 100%; /* Ensure text doesn't overflow its container */
       }
 
       .api-selector {
