--- a/index.html
+++ b/index.html
@@ -113,7 +113,11 @@
 
       .top-banner h1 {
         margin: 0;
-        font-size: clamp(16px, 4vw, 20px); /* Smaller font size */
+        font-size: clamp(
+          18px,
+          5vw,
+          24px
+        ); /* Increased from 16px-20px to 18px-24px */
         font-weight: 600;
         letter-spacing: -0.5px;
         color: white;
